--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,24 @@ ol, ul {
 .game-info {
   margin-left: 20px;
 }
+
+.gametitle{
+  text-align: center;
+}
+
+.endgame{
+  display: none;
+  width:400px;
+  height: 400px;
+  top:150px;
+  background-color: rgba(205, 133, 63, 0.8);
+  position: absolute;
+  left: 17%;
+  margin-left: -100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  font-size: 2em;
+}
