--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ ol, ul {
 
 .square {
   background: #fff;
-  border: 1px solid #999;
+  padding: 5px;
+  border: solid 3px #EFEFEF;
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -30,6 +31,13 @@ ol, ul {
   padding: 0;
   text-align: center;
   width: 200px;
+}
+
+.square:hover {
+  border: solid 2px #CCC;
+    -moz-box-shadow: 1px 1px 5px #999;
+    -webkit-box-shadow: 1px 1px 5px #999;
+        box-shadow: 1px 1px 5px #999;
 }
 
 .square:focus {
