--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,21 @@ body {
 ol, ul {
   padding-left: 30px;
 }
+.gametitle {
+  color:white;
+  background: #000;
+  padding: auto;
+  border: 1px dashed #fff;
+   border-radius: 50px;
+   box-shadow: 0 0 0 2px #000, 1px 3px 5px 2px rgba(10, 10, 0, 0.5);
+  font-size: 50px;
+  font-weight: bold;
+  float: none;
+  height: 60px;
+  margin: 30px;
+  text-align: center;
+  width: 600px;
+}
 
 .board-row:after {
   clear: both;
@@ -14,30 +29,50 @@ ol, ul {
 }
 
 .status {
-  margin-bottom: 10px;
+  color:white;
+  background: #000;
+  padding: 1px;
+  border: 1px dashed #fff;
+   border-radius: 2px;
+   box-shadow: 0 0 0 2px #000, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 20px;
+  float: none;
+  height: 20px;
+  margin: 4px;
+  text-align: center;
+  width: 200px;
+}
+.status:hover {
+  border: 1px dashed #ff0030;
+   border-radius: 2px;
+   box-shadow: 0 0 0 2px #000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   float: none;
 }
 
 .square {
-  background: #fff;
-  padding: 5px;
-  border: solid 3px #EFEFEF;
-  float: left;
+  background: #ff0030;
+  padding: 1px;
+  border: 1px dashed #fff;
+   border-radius: 50px;
+   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   text-shadow: -1px -1px #aa3030;
   font-size: 24px;
   font-weight: bold;
-  line-height: 200px;
+  /*line-height: 200px;   makes text move slightly*/
+  float: left;
   height: 200px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
+  margin: 4px;
   text-align: center;
   width: 200px;
 }
 
 .square:hover {
-  border: solid 2px #CCC;
-    -moz-box-shadow: 1px 1px 5px #999;
-    -webkit-box-shadow: 1px 1px 5px #999;
-        box-shadow: 1px 1px 5px #999;
+  border: 3px dashed black;
+   border-radius: 10px;
+   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   text-shadow: -1px -1px #aa3030;
 }
 
 .square:focus {
@@ -57,8 +92,27 @@ ol, ul {
   margin-left: 20px;
 }
 
-.gametitle{
+Button {
+  color:white;
+  background: #000;
+  padding: 1px;
+  border: 1px dashed #fff;
+   border-radius: 2px;
+   box-shadow: 0 0 0 2px #000, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 20px;
+  float: left;
+  height: 20px;
+  margin: 4px;
   text-align: center;
+  width: 200px;
+}
+Button:hover {
+  border: 1px dashed #ff0030;
+   border-radius: 2px;
+   box-shadow: 0 0 0 2px #000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   float: left;
 }
 
 .endgame{
