--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,17 @@ ol, ul {
 }
 
 .gametitle {
-  color: white;
   background: #000;
-  padding: auto;
   border: 1px dashed #fff;
   border-radius: 50px;
   box-shadow: 0 0 0 2px #000, 1px 3px 5px 2px rgba(10, 10, 0, 0.5);
+  color: white;
+  float: none;
   font-size: 50px;
   font-weight: bold;
-  float: none;
   height: 60px;
   margin: 30px;
+  padding: auto;
   text-align: center;
   width: 600px;
 }
@@ -31,7 +31,6 @@ ol, ul {
 
 .status {
   background: #ff0030;
-  padding: 1px;
   border: 1px dashed #fff;
   border-radius: 2px;
   box-shadow: 0 0 0 2px #ff0030, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
@@ -41,24 +40,25 @@ ol, ul {
   float: none;
   height: 20px;
   margin-bottom: 50px;
+  padding: 1px;
   text-align: center;
   width: 200px;
 }
 
 .square {
   background: #ff0030;
-  padding: 1px;
   border: 1px dashed #fff;
   border-radius: 50px;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  text-shadow: -1px -1px #aa3030;
+  float: left;
   font-size: 24px;
   font-weight: bold;
   /*line-height: 200px;   makes text move slightly*/
-  float: left;
   height: 200px;
   margin: 4px;
+  padding: 1px;
   text-align: center;
+  text-shadow: -1px -1px #aa3030;
   width: 200px;
 }
 
@@ -79,9 +79,9 @@ ol, ul {
 
 .board {
   align-items: center;
+  background-color: DimGray;
   display: flex;
   flex-direction: column;
-  background-color: DimGray;
 }
 
 .game-info {
@@ -89,23 +89,23 @@ ol, ul {
 }
 
 .reset {
-  padding: auto;
   margin-bottom: 20px;
+  padding: auto;
 }
 
 .resetButton {
-  color: white;
-  background: #000;
-  padding: 1px;
-  border: 1px dashed #fff;
   border-radius: 2px;
+  background: #000;
+  border: 1px dashed #fff;
   box-shadow: 0 0 0 2px #000, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
+  color: white;
+  float: none;
   font-size: 24px;
   font-weight: bold;
-  line-height: 20px;
-  float: none;
   height: 20px;
+  line-height: 20px;
   margin-top: 10px;
+  padding: 1px;
   text-align: center;
   width: 200px;
 }
@@ -118,18 +118,25 @@ ol, ul {
 }
 
 .endgame {
-  display: none;
-  width: 400px;
-  height: 400px;
-  top: 150px;
   background-color: rgba(205, 133, 63, 0.8);
-  position: absolute;
+  border-radius: 5px;
+  color: white;
+  display: none;
+  font-size: 2em;
+  height: 400px;
   left: 17%;
   margin-left: -100px;
   padding-top: 50px;
   padding-bottom: 50px;
+  position: absolute;
   text-align: center;
-  border-radius: 5px;
-  color: white;
-  font-size: 2em;
+  top: 150px;
+  width: 400px;
+}
+
+.on {
+  visibility: visible;
+}
+.off{
+  visibility: hidden;
 }
