--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,10 @@ ol, ul {
 }
 
 .status {
-  background: #ff0030;
+  background: #4C0001;
   border: 1px dashed #fff;
   border-radius: 2px;
-  box-shadow: 0 0 0 2px #ff0030, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
+  box-shadow: 0 0 0 2px black, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
   font-size: 24px;
   font-weight: bold;
   line-height: 20px;
@@ -56,27 +56,46 @@ ol, ul {
 }
 
 .square {
-  background: #ff0030;
-  border: 1px dashed #fff;
+  background: black;
+  color: #4C0001;
+  border: .5px dashed #4C0001;
   border-radius: 50px;
-  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  box-shadow: 0 0 0 4px black, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   float: left;
   font-size: 24px;
   font-weight: bold;
   /*line-height: 200px;   makes text move slightly*/
   height: 200px;
-  margin: 4px;
+  margin: 4.5px;
   padding: 1px;
   text-align: center;
-  text-shadow: -1px -1px #aa3030;
+  text-shadow: -1px -1px gray;
   width: 200px;
 }
 
 .square:hover {
-  border: 3px dashed black;
+  background: #4C0001;
+  border: .5px dashed black;
   border-radius: 10px;
-  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  text-shadow: -1px -1px #aa3030;
+  box-shadow: 0 0 0 4px #4C0001, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+}
+
+.psquare {
+  background: #4C0001;
+  color: black;
+  border: 1px dashed black;
+  border-radius: 50px;
+  box-shadow: 0 0 0 4px black, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  /*line-height: 200px;   makes text move slightly*/
+  height: 200px;
+  margin: 4.5px;
+  padding: 1px;
+  text-align: center;
+  text-shadow: -1px -1px gray;
+  width: 200px;
 }
 
 .square:focus {
@@ -86,10 +105,23 @@ ol, ul {
 
 .board {
   align-items: center;
-  background-color: DimGray;
+  background-color: black;
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
+}
+
+.border {
+  align-items: center;
+  background-color: #4C0001;
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+  border: 1px dashed #000;
+  border-radius: - 22px;
+  background: #4C0001;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #070000, #4C0001, #070000);
+  background: linear-gradient(to top, #070000, #4C0001, #070000);
 }
 
 .game-info {
@@ -104,9 +136,9 @@ ol, ul {
 .resetButton {
   border-radius: 2px;
   background: #000;
-  border: 1px dashed #fff;
+  border: 1px dashed black;
   box-shadow: 0 0 0 2px #000, 2px 1px 2px 3px rgba(10, 10, 0, 0.5);
-  color: white;
+  color: #4C0001;
   float: none;
   font-size: 24px;
   font-weight: bold;
@@ -119,7 +151,7 @@ ol, ul {
 }
 
 .resetButton:hover {
-  border: 1px dashed #ff0030;
+  border: .5px dashed #4C0001;
   border-radius: 2px;
   box-shadow: 0 0 0 2px #000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   float: none;
