--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,11 @@ ol, ul {
   text-align: center;
   text-shadow: -1px -1px gray;
   width: 200px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: -moz-none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .square:hover {
@@ -82,6 +87,29 @@ ol, ul {
 
 .psquare {
   background: #4C0001;
+  color: black;
+  border: 1px dashed black;
+  border-radius: 50px;
+  box-shadow: 0 0 0 4px black, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  /*line-height: 200px;   makes text move slightly*/
+  height: 200px;
+  margin: 4.5px;
+  padding: 1px;
+  text-align: center;
+  text-shadow: -1px -1px gray;
+  width: 200px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: -moz-none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.aisquare {
+  background: blue;
   color: black;
   border: 1px dashed black;
   border-radius: 50px;
@@ -148,6 +176,11 @@ ol, ul {
   padding: 1px;
   text-align: center;
   width: 200px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: -moz-none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .resetButton:hover {
