--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,13 @@ ol, ul {
   width: 200px;
 }
 
+.psquare:focus {
+  outline: none;
+}
 .square:focus {
+  outline: 0;
+}
+.aisquare:focus {
   outline: none;
 }
 
@@ -176,11 +182,6 @@ ol, ul {
   padding: 1px;
   text-align: center;
   width: 200px;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: -moz-none;
-  -o-user-select: none;
-  user-select: none;
 }
 
 .resetButton:hover {
