--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-body {
+.main {
+  height: 100%;
+  width: 100%;
   font-size: 50px;
   font-family: Fascinate, Futura, sans-serif;
   margin: 20px;
@@ -147,7 +149,7 @@ ol, ul {
 
 .board {
   align-items: center;
-
+  height:100%;
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
