--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  align-items: center;
+  height: 100vh;
   background: #673ab7; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to top,
@@ -11,7 +11,4 @@ html {
     #67578b,
     #44237e
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-body {
-  margin: 0;
 }
