css background fix

--- a/src/view/index.css
+++ b/src/view/index.css
@@ -1,5 +1,5 @@
 html {
-  height: 100vh;
+  height: 100;
   background: #673ab7; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to top,
